spacing fix
h2 margin top removed
and content block clamp spacing

--- a/style-new.css
+++ b/style-new.css
@@ -56,7 +56,6 @@ h2{
   color: #4A4A4A;
   font-size: clamp(1.75rem, 4vw, 2.25rem);
   font-weight: 900;
-  margin-block-start: 1.2em;
   margin-block-end: 0.8em;
 
 }
@@ -151,7 +150,9 @@ h4{
 }
 
 .content-group{
-padding: 4em 0em;
+/* padding: 4em 0em; */
+  padding-top:clamp(1em, 4vw, 4em);
+  padding-bottom: clamp(1em, 4vw, 4em);
 }
 
 .site-header{
@@ -250,6 +251,9 @@ color: #9B9B9B;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   margin: 0em;
   }
+.block h2{
+
+}
 
 .block .entry{
 display: grid;
@@ -379,6 +383,7 @@ max-width: 26em;
   align-items: center;
   grid-gap: 1em;
   list-style: none;
+  padding-inline-start:0;
 }
 
 .panel ul img {
